[package]
name = "wasm-workshop"
version = "0.1.0"
authors = ["m4dz <code@m4dz.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "^0.3", features = ['Window', 'Performance', 'PerformanceTiming'] }
serde = "^1.0.59"
serde_derive = "^1.0.59"
rand = { version = "^0.7", features = ["wasm-bindgen"] }
rust-crypto-wasm = "^0.3"
